third_party/rust/chromium_crates_io/vendor/anyhow-1.0.79/tests/ui/no-impl.stderr
error[E0599]: the method `anyhow_kind` exists for reference `&Error`, but its trait bounds were not satisfied
 --> tests/ui/no-impl.rs:7:13
  |
4 | struct Error;
  | ------------
  | |
  | doesn't satisfy `Error: Into<anyhow::Error>`
  | doesn't satisfy `Error: anyhow::kind::TraitKind`
  | doesn't satisfy `Error: std::fmt::Display`
...
7 |     let _ = anyhow!(Error);
  |             ^^^^^^^^^^^^^^ method cannot be called on `&Error` due to unsatisfied trait bounds
  |
  = note: the following trait bounds were not satisfied:
          `Error: Into<anyhow::Error>`
          which is required by `Error: anyhow::kind::TraitKind`
          `Error: std::fmt::Display`
          which is required by `&Error: anyhow::kind::AdhocKind`
          `&Error: Into<anyhow::Error>`
          which is required by `&Error: anyhow::kind::TraitKind`
note: the traits `Into` and `std::fmt::Display` must be implemented
 --> $RUST/core/src/fmt/mod.rs
  |
  | pub trait Display {
  | ^^^^^^^^^^^^^^^^^
  |
 ::: $RUST/core/src/convert/mod.rs
  |
  | pub trait Into<T>: Sized {
  | ^^^^^^^^^^^^^^^^^^^^^^^^
  = note: this error originates in the macro `anyhow` (in Nightly builds, run with -Z macro-backtrace for more info)
